@@ -14,10 +14,8 @@
   alias_method :to_s, :to_formatted_s
 end
 
-unless defined?(Date::DATE_FORMATS)
-  ::Date.const_set('DATE_FORMATS', {
-    :db           => "%Y-%m-%d",
-    :number       => "%Y%m%d",
-    :rfc822       => "%e %b %Y"
-  })
-end
+::Date.const_set('DATE_FORMATS', {
+  :db           => "%Y-%m-%d",
+  :number       => "%Y%m%d",
+  :rfc822       => "%e %b %Y"
+})
