@@ -1,4 +1,3 @@
-require "time"
 ::DateTime.class_eval do
   def to_formatted_s(format = :default)
     formats = ::Time::DATE_FORMATS
